--- a/sample/react/regacy/style.css
+++ b/sample/react/regacy/style.css
@@ -29,3 +29,30 @@ button:hover {
   margin: 8px;
   border-radius: 8px;
 }
+
+.incomplete-area {
+  border: 2px solid #aacfd0;
+  width: 400px;
+  min-height: 200px;
+  padding: 8px;
+  margin: 8px;
+  border-radius: 8px;
+
+}
+
+.title {
+  text-align: center;
+  margin-top: 0px;
+  font-weight: bold;
+
+}
+
+.list-row {
+  display: flex;
+  align-items: center;
+
+}
+
+.todo-item {
+  margin: 6px;
+}
