--- a/sample/react/regacy/style.css
+++ b/sample/react/regacy/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: sans-serif;
+  color: #666;
 }
 
 input {
@@ -38,6 +39,16 @@ button:hover {
   margin: 8px;
   border-radius: 8px;
 
+}
+
+.complete-area {
+  border: 2px solid #aacfd0;
+  width: 400px;
+  min-height: 200px;
+  padding: 8px;
+  margin: 8px;
+  border-radius: 8px;
+  background-color: #c9dede;
 }
 
 .title {
